--- a/GitApp/GitApp.vcxproj.filters
+++ b/GitApp/GitApp.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="GitApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NewFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
