--- a/GitApp/GitApp.vcxproj
+++ b/GitApp/GitApp.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GitApp.cpp" />
+    <ClCompile Include="NewFile.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
